Added 7-5-26 learnings